--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,9 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-security")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.boot:spring-boot-starter-data-rest")
+    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile("com.h2database:h2")
+    compile("org.springframework.security.oauth:spring-security-oauth2:2.0.3.RELEASE")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
