--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-security.user.name=admin
-security.user.password=boot
-management.security.enabled=false
+spring.datasource.platform=h2
 spring.security.oauth2.clientId=foo
 spring.security.oauth2.secret=bar
